Layout переключается по кнопке, сделать массив ид-шек layouts и включать только по ассоциотивному массиву нужный, остальные выключать

--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -20,6 +20,13 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include
+        android:id="@+id/main_container"
+        layout="@layout/content_main"
+        android:visibility="visible"/>
+    <include
+        android:id="@+id/main_setting"
+        layout="@layout/content_setting"
+        android:visibility="gone"/>
 
 </android.support.design.widget.CoordinatorLayout>
