сделал таблички в mysql, продолжаю делать layout, ошибку с textview устранил, из инта надо явно конвертить в стринг

--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -28,5 +28,13 @@
         android:id="@+id/main_setting"
         layout="@layout/content_setting"
         android:visibility="gone"/>
+    <include
+        android:id="@+id/main_statistic"
+        layout="@layout/content_statistic"
+        android:visibility="gone"/>
+    <include
+        android:id="@+id/main_about"
+        layout="@layout/content_about"
+        android:visibility="gone"/>
 
 </android.support.design.widget.CoordinatorLayout>
