--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,205 +1,279 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity"
+
     tools:showIn="@layout/app_bar_main">
 
-    <TextView
-        android:id="@+id/textView_reaction7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:background="@android:color/holo_purple"
-        android:ellipsize="start"
-        android:text="125"
-        android:textColor="@color/colorAccent"
-        android:typeface="serif"
-        app:layout_constraintTop_toTopOf="@+id/textView3"
-        tools:layout_editor_absoluteX="281dp" />
 
-    <TextView
-        android:id="@+id/textView_reaction8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
-        android:background="@color/ic_launcher_background_min"
-        android:ellipsize="start"
-        android:text="125"
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textSize="10sp"
-        app:layout_constraintTop_toTopOf="@+id/textView3"
-        tools:layout_editor_absoluteX="250dp" />
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
 
-    <TextView
-        android:id="@+id/textView_reaction9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
-        android:background="@color/ic_launcher_background_max"
-        android:ellipsize="start"
-        android:text="125"
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textSize="10sp"
-        app:layout_constraintTop_toTopOf="@+id/textView3"
-        tools:layout_editor_absoluteX="305dp" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:gravity="center"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView_power2"
-        android:layout_width="wrap_content"
-        android:layout_height="18dp"
-        android:layout_marginTop="20dp"
+        <!--CONTAINER ITEMS-->
 
-        android:text="@string/app_maintext3"
-        app:layout_constraintHorizontal_bias="0.796"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <LinearLayout
+            android:id="@+id/linearLayout_container_items"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/linearLayout_header_item"
+            android:layout_marginRight="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/textView_reaction4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:background="@android:color/holo_purple"
-        android:ellipsize="start"
-        android:text="125"
-        android:textColor="@color/colorAccent"
-        android:typeface="serif"
-        app:layout_constraintTop_toTopOf="@+id/textView3"
-        tools:layout_editor_absoluteX="160dp" />
+            <LinearLayout
+                android:id="@+id/linearLayout_container_items"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/linearLayout_header_item"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView_reaction5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:background="@color/ic_launcher_background_min"
-        android:ellipsize="start"
-        android:text="125"
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textSize="10sp"
-        app:layout_constraintTop_toTopOf="@+id/textView3"
-        tools:layout_editor_absoluteX="129dp" />
+                <TextView
+                    android:id="@+id/textView_reaction7"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="#A64B00"
+                    android:gravity="center"
+                    android:text="125"
+                    android:textColor="@color/colorAccent"
+                    android:typeface="serif"></TextView>
 
-    <TextView
-        android:id="@+id/textView_reaction6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:background="@color/ic_launcher_background_max"
-        android:ellipsize="start"
-        android:text="125"
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textSize="10sp"
-        app:layout_constraintTop_toTopOf="@+id/textView3"
-        tools:layout_editor_absoluteX="184dp" />
+                <TextView
+                    android:id="@+id/textView_power2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="18dp"
-        android:layout_marginTop="16dp"
+                <TextView
+                    android:id="@+id/textView_reaction9"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="#008500"
+                    android:gravity="center"
+                    android:text="125"
+                    android:textAppearance="@style/TextAppearance.AppCompat"
+                    android:textSize="10sp" />
 
-        android:text="@string/app_maintext"
-        app:layout_constraintHorizontal_bias="0.075"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+                <TextView
+                    android:id="@+id/textView_reaction8"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="#A60000"
+                    android:gravity="center"
+                    android:text="125"
+                    android:textAppearance="@style/TextAppearance.AppCompat"
+                    android:textSize="10sp" />
 
-    <TextView
-        android:id="@+id/textView_power"
-        android:layout_width="wrap_content"
-        android:layout_height="18dp"
-        android:layout_marginTop="16dp"
+            </LinearLayout>
 
-        android:text="@string/app_maintext2"
-        app:layout_constraintHorizontal_bias="0.443"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            <LinearLayout
+                android:id="@+id/linearLayout_container_items"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/linearLayout_header_item"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
-    <com.jjoe64.graphview.GraphView
-        android:id="@+id/graph"
-        android:layout_width="wrap_content"
-        android:layout_height="300dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+                <TextView
+                    android:id="@+id/textView_reaction7"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/ramkatextview"
+                    android:gravity="center"
+                    android:text="125"
+                    android:textColor="@color/colorAccent"
+                    android:typeface="serif"></TextView>
 
-        app:layout_constraintTop_toTopOf="parent" />
+                <TextView
+                    android:id="@+id/textView_power"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center" />
 
-    <SeekBar
-        android:id="@+id/seekBar"
-        style="@style/Widget.AppCompat.SeekBar.Discrete"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:max="20"
-        android:progress="1"
-        android:thumb="@drawable/ic_repeat_black_24dp"
+                <TextView
+                    android:id="@+id/textView_reaction"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="#269926"
+                    android:gravity="center"
+                    android:text="125"
+                    android:textAppearance="@style/TextAppearance.AppCompat"
+                    android:textSize="10sp" />
 
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+                <TextView
+                    android:id="@+id/textView_reaction2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="#BF3030"
+                    android:gravity="center"
+                    android:text="125"
+                    android:textAppearance="@style/TextAppearance.AppCompat"
+                    android:textSize="10sp" />
 
-    <TextView
-        android:id="@+id/textView_RepeatNumbers"
-        android:layout_width="wrap_content"
-        android:layout_height="25dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="40dp"
-        android:text="RepeatNubers"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/graph" />
+            </LinearLayout>
 
-    <android.support.constraint.Group
-        android:id="@+id/group2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:constraint_referenced_ids="textView_reaction,textView_reaction2,textView_reaction3" />
 
-    <TextView
-        android:id="@+id/textView_reaction"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:background="@android:color/holo_purple"
-        android:ellipsize="start"
-        android:text="125"
-        android:textColor="@color/colorAccent"
-        android:typeface="serif"
-        app:layout_constraintTop_toTopOf="@+id/textView3"
-        tools:layout_editor_absoluteX="40dp" />
+            <LinearLayout
+                android:id="@+id/linearLayout_container_items"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/linearLayout_header_item"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView_reaction2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:background="@color/ic_launcher_background_min"
-        android:ellipsize="start"
-        android:text="125"
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textSize="10sp"
-        app:layout_constraintTop_toTopOf="@+id/textView3"
-        tools:layout_editor_absoluteX="16dp" />
+                <TextView
+                    android:id="@+id/textView_reaction7"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/gradtextview"
+                    android:gravity="center"
+                    android:text="125"
+                    android:textColor="@color/colorAccent"
+                    android:typeface="serif"></TextView>
 
-    <TextView
-        android:id="@+id/textView_reaction3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:background="@color/ic_launcher_background_max"
-        android:ellipsize="start"
-        android:text="125"
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textSize="10sp"
-        app:layout_constraintTop_toTopOf="@+id/textView3"
-        tools:layout_editor_absoluteX="72dp" />
+                <TextView
+                    android:id="@+id/textView_power3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center" />
 
-</android.support.constraint.ConstraintLayout>
+                <TextView
+                    android:id="@+id/textView_reaction4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="#00CC00"
+                    android:gravity="center"
+                    android:text="125"
+                    android:textAppearance="@style/TextAppearance.AppCompat"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/textView_reaction3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="#FF0000"
+                    android:gravity="center"
+                    android:text="125"
+                    android:textAppearance="@style/TextAppearance.AppCompat"
+                    android:textSize="10sp" />
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linearLayout_container_items"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/linearLayout_header_item"
+            android:layout_marginRight="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <com.jjoe64.graphview.GraphView
+                android:id="@+id/graph"
+                android:layout_width="wrap_content"
+                android:layout_height="300dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+
+                app:layout_constraintTop_toTopOf="parent" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linearLayout_container_items"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/linearLayout_header_item"
+            android:layout_marginRight="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <SeekBar
+                android:id="@+id/seekBar"
+                style="@style/Widget.AppCompat.SeekBar.Discrete"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/graph"
+                android:layout_alignLeft="@id/graph"
+                android:layout_marginBottom="16dp"
+                android:max="20"
+
+                android:progress="1"
+                android:thumb="@drawable/ic_repeat_black_24dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linearLayout_container_items"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/linearLayout_header_item"
+            android:layout_marginRight="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView_RepeatNumbers"
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:layout_below="@id/seekBar"
+                android:layout_alignLeft="@id/seekBar"
+
+                android:text="RepeatNubers" />
+        </LinearLayout>
+
+
+        <!--CONTAINER ITEMS-->
+
+    </LinearLayout>
+
+    <!--CONTAINER ITEMS-->
+
+
+    <!--CONTAINER ITEMS-->
+
+
+    <!--CONTAINER ITEMS-->
+
+</RelativeLayout>
+
+
+
+
