--- a/app/src/main/res/drawable/gradtextview2.xml
+++ b/app/src/main/res/drawable/gradtextview2.xml
@@ -2,12 +2,13 @@
     android:shape="rectangle"
     >
 
-    <solid android:color="#f5ebf7" />
+    <solid
+        android:color="#e6dee7" />
 
-    <corners android:radius="12dp" />
+    <corners android:radius="7dp" />
 
     <stroke
         android:width="2dp"
-        android:color="#cdb4dc" />
+        android:color="#c596e1" />
 
 </shape>
