--- a/app/src/main/res/drawable/gradtextview3.xml
+++ b/app/src/main/res/drawable/gradtextview3.xml
@@ -2,12 +2,14 @@
     android:shape="rectangle"
     >
 
-    <solid android:color="#f5ebf7" />
+    <solid
+        android:color="#dfe7de" />
 
-    <corners android:radius="12dp" />
+    <corners android:radius="9dp" />
 
     <stroke
         android:width="2dp"
-        android:color="#cdb4dc" />
+        android:color="#a3e196" />
 
 </shape>
+
