--- a/app/src/main/res/drawable/gradtextview4.xml
+++ b/app/src/main/res/drawable/gradtextview4.xml
@@ -2,12 +2,14 @@
     android:shape="rectangle"
     >
 
-    <solid android:color="#f5ebf7" />
+    <solid
+        android:color="#d4f5cf" />
 
-    <corners android:radius="12dp" />
+    <corners android:radius="7dp" />
 
     <stroke
         android:width="2dp"
-        android:color="#cdb4dc" />
+        android:color="#82b477" />
 
 </shape>
+
