--- a/app/src/main/res/drawable/gradtextview6.xml
+++ b/app/src/main/res/drawable/gradtextview6.xml
@@ -2,12 +2,14 @@
     android:shape="rectangle"
     >
 
-    <solid android:color="#f5ebf7" />
+    <solid
+        android:color="#fae3e3" />
 
-    <corners android:radius="12dp" />
+    <corners android:radius="9dp" />
 
     <stroke
         android:width="2dp"
-        android:color="#cdb4dc" />
+        android:color="#ce3d3d" />
 
 </shape>
+
